fixing footer responsiveness and sidebar design properties

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -7,7 +7,7 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<nav class="navbar bg-base-200 z-50 w-full space-x-4 max-sm:border-b-2 max-sm:border-black font-medium">
+<nav class="navbar bg-base-200 z-50 w-full space-x-4 border-b-2 border-black font-medium">
     <div class="navbar-start">
       <div class="dropdown">
         <label tabindex="0" class="btn btn-ghost lg:hidden">
