--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -2,8 +2,8 @@
 
 ---
 
-<footer class="footer footer-center p-5 bg-base-200 text-base-content max-sm:border-t-2 max-sm:border-black">
+<footer class="footer footer-center p-5 bg-base-200 bottom-0 text-base-content border-t-2 border-black">
     <div class="flex">
-        <p>Copyright © 2023 - Made with <i class="fa-solid fa-heart" style="color: #e01f1f;"></i> @rdvid</p>
+        <p>Copyright © 2024 - Made with <i class="fa-solid fa-heart" style="color: #e01f1f;"></i> @rdvid</p>
     </div>
 </footer>
