--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,15 +20,15 @@ const lang = getLangFromUrl(Astro.url);
 	
 	</head>
 
-	<body class="flex flex-col min-w-screen max-sm:h-fit h-screen" onload="typeWriter()">
+	<body class="flex flex-col min-h-screen lg:h-screen" onload="typeWriter()">
         <Header />
-        <div class="flex flex-col lg:flex-row h-4/5 align-center bg-base-100">
-            <Sidebar />
-            <div class="w-full h-fit bg-base-100 lg:p-8 md:h-full md:border-2 md:border-black">
+        <div class="flex flex-col h-full bg-base-100 lg:flex-row">
+			<Sidebar />
+            <div class="w-full h-fit bg-base-100 lg:p-8">
                 <slot />
             </div>
         </div>   
-        <Footer />
+		<Footer />
 	</body>
     
 </html>
