--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -15,17 +15,52 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 <BaseLayout>
-  <article class="flex flex-col h-full max-lg:h-screen">
-    <div class="grid grid-col lg:grid-cols-2 p-4">
-      <div class="row px-4">
-        <h2 class="text-center py-2">test</h2>
-        <p class="text-justify">{t('about.intro')}</p>
+  <article class="flex flex-col h-full">
+    <div class="grid grid-col lg:grid-cols-4 p-2">
+
+      <div class="row p-4">
+        <h2 class="text-center py-2 font-bold">Who am I</h2>
+        <p class="text-justify">
+          Hello! I'm Rafael David, a brazil-based passionate and results-driven Web Developer with a knack 
+          for Backend solutions. With an academical background in business management, I bring creativity, dedication, and 
+          high level of commitment to the table. Whether it's tackling challenging projects 
+          or collaborating with dynamic (and multicultural/international) teams, I thrive in environments that value innovation, responsability 
+          and a commitment to excellence.
+        </p>
+      </div> 
+
+      <div class="row p-4">
+        <h2 class="text-center py-2 font-bold">What im doing</h2>
+        <p class="text-justify">
+          Nowdays i'm working with Cubos Academy as a Backend Instructor providing insights and 
+          guidance for freshmans and new developers, performing pair programming and taught concepts
+          of web development with javascript throught NodeJS ecossystem using ExpressJS building RestAPI 
+          and ReactJS for front-end development.
+        </p>
       </div>
-      
-      <div class="row px-4">
-        <!-- <h2 class="text-center py-2">test</h2> -->
-        <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime molestias eos ducimus fugit quibusdam! Sint nesciunt quam ipsum quo tenetur deleniti obcaecati, in excepturi eius, ad voluptatem magnam, omnis quasi.</p>
+
+      <div class="row p-4">
+        <h2 class="text-center py-2 font-bold">Key Strenghts</h2>
+        <p class="text-justify">
+          What sets me apart is my dedication to continuous learning and adaptability. 
+          In a rapidly evolving software development market, I've kept my finger on the pulse of emerging trends and technologies, 
+          staying ahead of the curve. I'm not just about technical skills; my ability to communicate effectively 
+          and collaborate seamlessly has been instrumental in fostering positive working relationships with colleagues, 
+          stakeholders, and clients alike.
+        </p>
       </div>
+
+      <div class="row p-4">
+        <h2 class="text-center py-2 font-bold">Personal Interests and Hobbies:</h2>
+        <p class="text-justify">
+          Away from the professional realm, I am an avid reader and classical piano student. Whether I'm immersed in 
+          philosophy, exploring the pages of old russian writters, or capturing nuances of human emotions through 
+          piano chords, I find joy in the diverse tapestry of life's experiences. 
+          This side passions not only rejuvenates my creative spirit but also fuels my ability to approach challenges with a fresh 
+          perspective. 
+        </p>
+      </div>
+
     </div>
   </article>
 </BaseLayout>
@@ -34,5 +69,57 @@ const t = useTranslations(lang);
     // TODO: build spanish, french and english full versions
     // TODO: fix responsiveness to small screens
     // TODO: carousel with highlighted projects 
-  
+
+Introduction:
+Hello there! I'm Rafael David, a passionate and results-driven Web Developer with a knack 
+for Backend solutions. With a background in business management, I bring creativity, dedication, and 
+high level of commitment for the table. Whether it's tackling challenging projects 
+or collaborating with dynamic teams, I thrive in environments that value innovation, responsability 
+and a commitment to excellence.
+
+Professional Background:
+Over the years, I've had the privilege of working on diverse projects that have allowed me to hone my 
+skills in [Specific Skills/Technologies]. From [Highlight a Significant Project] to [Another Notable Project],
+I've consistently demonstrated the ability to translate ideas into tangible, high-quality outcomes. 
+My approach is not just about meeting requirements but exceeding expectations, ensuring that each project 
+reflects both my expertise and a client's unique vision.
+
+Key Strengths:
+What sets me apart is my dedication to continuous learning and adaptability. 
+In a rapidly evolving [Industry/Field], I've kept my finger on the pulse of emerging trends and technologies, 
+staying ahead of the curve. I'm not just about technical skills; my ability to communicate effectively 
+and collaborate seamlessly has been instrumental in fostering positive working relationships with colleagues, 
+stakeholders, and clients alike.
+
+Passions and Future Aspirations:
+Beyond my professional endeavors, I'm passionate about [Personal Interests/Hobbies]. Whether it's 
+[Specific Interest] or [Another Interest], these pursuits not only enrich my life but also contribute to 
+my creativity and problem-solving skills. Looking ahead, I'm excited about the prospect of 
+[Future Aspirations/Goals], and I am eager to bring my skills and enthusiasm to new challenges and 
+opportunities.
+
+Personal Interests and Hobbies:
+Away from the professional realm, I am an avid [Hobby/Interest Enthusiast]. Whether I'm immersed in 
+[Favorite Hobby], exploring the pages of a captivating novel, or capturing fleeting moments through my 
+camera lens, I find joy in the diverse tapestry of life's experiences. This passion for [Hobby/Interest] 
+not only rejuvenates my creative spirit but also fuels my ability to approach challenges with a fresh 
+perspective. Outside of my professional pursuits, you might find me [Another Hobby/Interest] or 
+[Engaging in Another Activity], always seeking new adventures and avenues for personal growth.
+
+This blend of personal interests not only adds vibrancy to my life but also reinforces the idea that a 
+well-rounded individual brings a unique and holistic perspective to every endeavor. As I navigate the 
+intricate dance between my professional and personal worlds, I believe in the power of balance, harnessing 
+the energy from both spheres to contribute meaningfully to both my work and the communities I engage with.
+    
+
+
+
+
+
+
+
+
+
+
+    
 -->
