--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -24,7 +24,7 @@ const lang = getLangFromUrl(Astro.url);
         <Header />
         <div class="flex flex-col h-full bg-base-100 lg:flex-row">
 			<Sidebar />
-            <div class="w-full h-fit bg-base-100 lg:p-8">
+            <div class="w-full h-fit bg-base-100 p-4">
                 <slot />
             </div>
         </div>   
