--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,13 +2,13 @@
 import Header from "../components/header.astro"
 import Footer from "../components/footer.astro"
 import Sidebar from "../components/sidebar.astro"
-import { darkTheme, getLangFromUrl } from "../utils/utils";
+import { getLangFromUrl } from "../utils/utils";
 
 const lang = getLangFromUrl(Astro.url);
 
 ---
 
-<html lang={lang == 'br' ? 'pt-br' : lang} data-theme={darkTheme ? 'business' : 'lofi'} class="min-h-full relative overflow-x-hidden">
+<html lang={lang == 'br' ? 'pt-br' : lang} data-theme='lofi' class="min-h-full relative overflow-x-hidden">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -32,3 +32,13 @@ const lang = getLangFromUrl(Astro.url);
 	</body>
     
 </html>
+<script is:inline>
+	const theme = (() => {
+	  if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
+		return localStorage.getItem("theme");
+	  }
+	})();
+  
+	window.localStorage.setItem("theme", theme);
+	document.querySelector('html').setAttribute('data-theme', theme);
+  </script>
