fixing color pallete, introducing tech cards and fix body load issue

--- a/src/components/card/python-card.astro
+++ b/src/components/card/python-card.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<div class="max-w-sm rounded-xl overflow-hidden shadow-lg w-fit cursor-pointer">
+<div class="max-w-sm rounded-xl overflow-hidden shadow-lg bg-[#fff] w-fit cursor-pointer">
     <div class="w-16 m-16">
         <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <title>Python</title>
