--- a/src/components/modal/github-card.astro
+++ b/src/components/modal/github-card.astro
@@ -15,11 +15,15 @@
     <div class="card bg-black text-slate-100">
       <div class="modal-action justify-end mr-4 bg-transparent">
         <form method="dialog">
-          <button class="btn-outline bg-transparent rounded-full text-red-700 hover:text-red-700 hover:bg-transparent focus:outline-none font-extrabold absolute"><i class="fa-solid fa-xmark fa-xl"></i></button>
+          <button class="btn-outline bg-transparent rounded-full text-red-700 hover:text-red-700 hover:bg-transparent focus:outline-none font-extrabold absolute">
+            <i class="fa-solid fa-xmark fa-xl"></i>
+          </button>
         </form>
       </div>
       <figure class="px-10">
-        <img src="https://avatars.githubusercontent.com/u/60834135" class="w-6/12 max-w-4/12 rounded-full border-2 border-black" alt="my profile picture"/>
+        <img src="https://avatars.githubusercontent.com/u/60834135" 
+              class="w-6/12 max-w-4/12 rounded-full border-2 border-black" 
+              alt="my profile picture"/>
       </figure>
       <div class="card-body items-center text-center">
 
