--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -26,9 +26,9 @@ const t = useTranslations(lang);
     </div>
     <div class="navbar-center hidden lg:flex">
       <ul class="menu menu-horizontal px-1">
-        <li><a href=`${Astro.url.origin}/${lang}/about/`>{t('nav.about')}</a></li>
-        <li><a href=`${Astro.url.origin}/${lang}/technologies/`>{t('nav.technologies')}</a></li>
-        <li><a href=`${Astro.url.origin}/${lang}/projects/`>{t('nav.projects')}</a></li>
+        <li><a href=`${Astro.url.origin}/${lang}/about`>{t('nav.about')}</a></li>
+        <li><a href=`${Astro.url.origin}/${lang}/technologies`>{t('nav.technologies')}</a></li>
+        <li><a href=`${Astro.url.origin}/${lang}/projects`>{t('nav.projects')}</a></li>
       </ul>
     </div>
     <div class="navbar-center flex justify-center">
