--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,11 +20,11 @@ const lang = getLangFromUrl(Astro.url);
 	
 	</head>
 
-	<body class="flex flex-col min-h-screen lg:h-screen" onload="typeWriter()">
+	<body class="flex flex-col min-h-screen lg:h-screen">
         <Header />
         <div class="flex flex-col h-full bg-base-100 lg:flex-row">
 			<Sidebar />
-            <div class="w-full h-fit bg-base-100 p-4">
+            <div class="w-full bg-base-100 p-4">
                 <slot />
             </div>
         </div>   
@@ -32,6 +32,13 @@ const lang = getLangFromUrl(Astro.url);
 	</body>
     
 </html>
+
+<style is:global>
+	[data-theme="business"] div > div > h2 {
+		color: black;
+	}
+</style>
+
 <script is:inline>
 	const theme = (() => {
 	  if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
@@ -41,4 +48,4 @@ const lang = getLangFromUrl(Astro.url);
   
 	window.localStorage.setItem("theme", theme);
 	document.querySelector('html').setAttribute('data-theme', theme);
-  </script>
+</script>
