--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -18,7 +18,7 @@ const t = useTranslations(lang);
   <article class="flex flex-col h-full">
     <div class="grid grid-col lg:grid-cols-4 p-2">
 
-      <div class="row p-4">
+      <section class="row p-4">
         <h2 class="text-center py-2 font-bold">Who am I</h2>
         <p class="text-justify">
           Hello! I'm Rafael David, a brazil-based passionate and results-driven Web Developer with a knack 
@@ -27,9 +27,9 @@ const t = useTranslations(lang);
           or collaborating with dynamic (and multicultural/international) teams, I thrive in environments that value innovation, responsability 
           and a commitment to excellence.
         </p>
-      </div> 
+      </section> 
 
-      <div class="row p-4">
+      <section class="row p-4">
         <h2 class="text-center py-2 font-bold">What im doing</h2>
         <p class="text-justify">
           Nowdays i'm working with Cubos Academy as a Backend Instructor providing insights and 
@@ -37,10 +37,10 @@ const t = useTranslations(lang);
           of web development with javascript throught NodeJS ecossystem using ExpressJS building RestAPI 
           and ReactJS for front-end development.
         </p>
-      </div>
+      </section>
 
-      <div class="row p-4">
-        <h2 class="text-center py-2 font-bold">Key Strenghts</h2>
+      <section class="row p-4">
+        <h2 class="text-center py-2 font-bold">Key Strengths</h2>
         <p class="text-justify">
           What sets me apart is my dedication to continuous learning and adaptability. 
           In a rapidly evolving software development market, I've kept my finger on the pulse of emerging trends and technologies, 
@@ -48,14 +48,14 @@ const t = useTranslations(lang);
           and collaborate seamlessly has been instrumental in fostering positive working relationships with colleagues, 
           stakeholders, and clients alike.
         </p>
-      </div>
+      </section>
 
-      <div class="row p-4">
+      <section class="row p-4">
         <h2 class="text-center py-2 font-bold">Personal Interests and Hobbies:</h2>
         <p class="text-justify">
           Away from the professional realm, I am an avid reader and classical piano student. Whether I'm immersed in 
           philosophy, exploring the pages of old russian writters, or capturing nuances of human emotions through 
-          piano chords, I find joy in the diverse tapestry of life's experiences. 
+          piano chords, I find joy in the sectionerse tapestry of life's experiences. 
           This side passions not only rejuvenates my creative spirit but also fuels my ability to approach challenges with a fresh 
           perspective. 
         </p>
