--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -17,7 +17,7 @@ const t = useTranslations(lang);
 
 <BaseLayout>
   <article class="flex flex-col h-full max-lg:h-screen justify-center">
-    <div class="hero">
+    <section class="hero">
       <div class="hero-content flex-col w-full max-lg:py-8 lg:flex-row lg:align-center">
         <img src="https://avatars.githubusercontent.com/u/60834135" class="w-3/12 max-w-4/12 max-lg:w-8/12 rounded-full shadow-2xl border-2 border-black shadow-gray-600" alt="my profile picture"/>
         <div class="flex flex-col justify-center w-6/12 max-lg:w-full text-center max-lg:p-4r">
@@ -28,20 +28,17 @@ const t = useTranslations(lang);
               <li><i class="fa-solid fa-computer fa-md pr-4 pt-2 bg-base-100"></i>{t('home.subtitle')}</li>
               <li><i class="fa-solid fa-music fa-lg pr-4 pt-2 bg-base-100"></i>{t('home.second-subtitle')}</li>
             </ul>
-            <!-- <p class="w-8/12 max-lg:w-full">{t('home.subtitle')}</p> -->
           </div>
-          <button class="w-4/12 btn btn-primary rounded-full self-center max-lg:w-6/12">About me</button>
+          <button class="w-4/12 btn btn-primary rounded-full self-center max-lg:w-6/12">
+            <a href=`${Astro.url.origin}/${lang}/about`>About me</a>
+          </button>
         </div>
       </div>
-    </div>
+    </section>
   </article>
-  
 </BaseLayout>
 
-<style>
-</style>
-
-<script defer>
+<script>
   var i = 0;
   var txt = `${document.getElementById("placeholder").innerText}`; /* The text */
   var speed = 150; /* The speed/duration of the effect in milliseconds */
@@ -53,4 +50,6 @@ const t = useTranslations(lang);
       setTimeout(typeWriter, speed);
     }
   }
+
+  typeWriter();
 </script>
