--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -48,3 +48,9 @@ const t = useTranslations(lang);
         <a class="btn mr-2 max-lg:hidden bg-base-300 border-2 border-black rounded-full"><i class="fa-solid fa-download fa-mg"></i>{t('nav.downloadcv')}</a>
     </div>
 </nav>
+
+<style>
+  a:hover{
+    background-color: transparent;
+  }
+</style>
