--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -11,16 +11,15 @@ const lang = getLangFromUrl(Astro.url);
 <html lang={lang == 'br' ? 'pt-br' : lang} data-theme='lofi' class="min-h-full relative overflow-x-hidden">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/logo.svg" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.11.0/css/flag-icons.min.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 		<meta name="generator" content={Astro.generator} />
 		<script src="https://kit.fontawesome.com/6b3a9e549b.js" crossorigin="anonymous" defer></script>
-		<title>< rdvid /></title>
-	
+		<title>{Astro.props.title}</title>
 	</head>
 
-	<body class="flex flex-col min-h-screen lg:h-screen">
+	<body class="flex flex-col h-fit lg:h-screen">
         <Header />
         <div class="flex flex-col h-full bg-base-100 lg:flex-row">
 			<Sidebar />
@@ -37,7 +36,6 @@ const lang = getLangFromUrl(Astro.url);
 	[data-theme="business"] div > div > h2 {
 		color: black;
 	}
-
 </style>
 
 <script is:inline>
