--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -15,11 +15,13 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<BaseLayout>
+<BaseLayout title="</rdvid>">
   <article class="flex flex-col h-full max-lg:h-screen justify-center">
     <section class="hero">
       <div class="hero-content flex-col w-full max-lg:py-8 lg:flex-row lg:align-center">
-        <img src="https://avatars.githubusercontent.com/u/60834135" class="w-3/12 max-w-4/12 max-lg:w-8/12 rounded-full shadow-2xl border-2 border-black shadow-gray-600" alt="my profile picture"/>
+        <img src="https://f005.backblazeb2.com/file/debbuggers/picofme (1).png" 
+             class="w-3/12 max-w-4/12 max-lg:w-8/12 rounded-xl shadow-2xl border-2 border-black shadow-gray-600" 
+             alt="my profile picture"/>
         <div class="flex flex-col justify-center w-6/12 max-lg:w-full text-center max-lg:p-4r">
           <p id="placeholder" class="hidden">{t('home.title')}</p>
           <h1 id="home-title" class="text-4xl font-bold text-center max-lg:text-3xl"></h1>
@@ -52,4 +54,8 @@ const t = useTranslations(lang);
   }
 
   typeWriter();
+
+  // fade in
+  // transition-opacity ease-in duration-700 opacity-0 hover:opacity-100
+
 </script>
