--- a/src/pages/[lang]/technologies.astro
+++ b/src/pages/[lang]/technologies.astro
@@ -1,20 +1,9 @@
 ---
 import { getLangFromUrl, useTranslations } from '../../utils/utils';
-
+import type { TechnologyCard } from '../../interface/TechnologyCard'
 import BaseLayout from '../../layouts/BaseLayout.astro';
-import NodeCard from '../../components/card/node-card.astro';
-import NestCard from '../../components/card/nest-card.astro';
-import ExpressCard from '../../components/card/express-card.astro';
-import ReactCard from '../../components/card/react-card.astro';
-import AngularCard from '../../components/card/angular-card.astro';
-import JestCard from '../../components/card/jest-card.astro';
-
-import PostgresCard from '../../components/card/postgres-card.astro';
-import DjangoCard from '../../components/card/django-card.astro';
-import PythonCard from '../../components/card/python-card.astro';
-import LinuxCard from '../../components/card/linux-card.astro';
-import GitCard from '../../components/card/git-card.astro';
-import DockerCard from '../../components/card/docker-card.astro';
+import TechCard from '../../components/card/tech-card.astro';
+import { technologyCards } from '../../utils/technology-cards.json'
 
 export function getStaticPaths() {
   return [
@@ -27,29 +16,18 @@ export function getStaticPaths() {
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
-const cards = [
-  NodeCard,
-  NestCard,
-  ExpressCard,
-  AngularCard,
-  ReactCard,
-  JestCard,
-  PostgresCard,
-  DjangoCard,
-  PythonCard,
-  LinuxCard,
-  GitCard,
-  DockerCard
-];
 ---
 
 <BaseLayout>
   <article class="flex flex-col h-full" >
     <div class="grid grid-cols-1 min-[450px]:grid-cols-2 min-[625px]:grid-cols-3 min-[875px]:grid-cols-4 min-[1000px]:grid-cols-5 xl:grid-cols-6">
       {
-        cards.map((Card)=>(
-          <section class="grid m-1">
-            <Card />
+        technologyCards.map((card: TechnologyCard)=>(
+          <section class="grid my-4">
+            <TechCard 
+                name={card.name}
+                bgHexColor={card.bgHexColor}
+                iconHexColor={card.iconHexColor} />
           </section>
         ))
       }
