--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,9 +1,9 @@
 ---
-
+import {Icon} from 'astro-icon/components';
 ---
 
 <footer class="footer footer-center p-5 bg-base-200 bottom-0 static text-base-content border-t-2 border-black">
-    <div class="flex">
-        <p>Copyright © 2024 - Made with <i class="fa-solid fa-heart" style="color: #e01f1f;"></i> @rdvid</p>
+    <div class="flex flex-row">
+       <p>Copyright © 2024 - Made with</p><span><Icon name={"fa:heart"} color='red'/></span><p>@rdvid</p>
     </div>
 </footer>
