--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -18,30 +18,30 @@ const t = useTranslations(lang);
 <BaseLayout title={t('nav.about')}>
   
   <article class="flex flex-col h-full">
-    <div class="grid grid-col lg:grid-cols-4 p-2">
+    <div class="grid grid-col lg:grid-cols-4 p-2 h-full">
 
-      <section class="row p-4">
+      <section class="row p-4 bg-base-200 m-1">
         <h2 class="text-center py-2 font-bold">{t('about.intro.title')}</h2>
         <p class="text-justify">
           {t('about.intro')}
         </p>
       </section> 
 
-      <section class="row p-4">
+      <section class="row p-4 bg-base-200 m-1 flex flex-col justify-end">
         <h2 class="text-center py-2 font-bold">{t('about.nowdays.title')}</h2>
         <p class="text-justify">
           {t('about.nowdays')}
         </p>
       </section>
 
-      <section class="row p-4">
+      <section class="row p-4 bg-base-200 m-1">
         <h2 class="text-center py-2 font-bold">{t('about.keypoints.title')}</h2>
         <p class="text-justify">
           {t('about.keypoints')}
         </p>
       </section>
 
-      <section class="row p-4">
+      <section class="row p-4 bg-base-200 m-1">
         <h2 class="text-center py-2 font-bold">{t('about.hobbies.title')}</h2>
         <p class="text-justify">
           {t('about.hobbies')}
@@ -51,62 +51,3 @@ const t = useTranslations(lang);
     </div>
   </article>
 </BaseLayout>
-
-<!-- 
-    // TODO: build spanish, french and english full versions
-    // TODO: fix responsiveness to small screens
-    // TODO: carousel with highlighted projects 
-
-Introduction:
-Hello there! I'm Rafael David, a passionate and results-driven Web Developer with a knack 
-for Backend solutions. With a background in business management, I bring creativity, dedication, and 
-high level of commitment for the table. Whether it's tackling challenging projects 
-or collaborating with dynamic teams, I thrive in environments that value innovation, responsability 
-and a commitment to excellence.
-
-Professional Background:
-Over the years, I've had the privilege of working on diverse projects that have allowed me to hone my 
-skills in [Specific Skills/Technologies]. From [Highlight a Significant Project] to [Another Notable Project],
-I've consistently demonstrated the ability to translate ideas into tangible, high-quality outcomes. 
-My approach is not just about meeting requirements but exceeding expectations, ensuring that each project 
-reflects both my expertise and a client's unique vision.
-
-Key Strengths:
-What sets me apart is my dedication to continuous learning and adaptability. 
-In a rapidly evolving [Industry/Field], I've kept my finger on the pulse of emerging trends and technologies, 
-staying ahead of the curve. I'm not just about technical skills; my ability to communicate effectively 
-and collaborate seamlessly has been instrumental in fostering positive working relationships with colleagues, 
-stakeholders, and clients alike.
-
-Passions and Future Aspirations:
-Beyond my professional endeavors, I'm passionate about [Personal Interests/Hobbies]. Whether it's 
-[Specific Interest] or [Another Interest], these pursuits not only enrich my life but also contribute to 
-my creativity and problem-solving skills. Looking ahead, I'm excited about the prospect of 
-[Future Aspirations/Goals], and I am eager to bring my skills and enthusiasm to new challenges and 
-opportunities.
-
-Personal Interests and Hobbies:
-Away from the professional realm, I am an avid [Hobby/Interest Enthusiast]. Whether I'm immersed in 
-[Favorite Hobby], exploring the pages of a captivating novel, or capturing fleeting moments through my 
-camera lens, I find joy in the diverse tapestry of life's experiences. This passion for [Hobby/Interest] 
-not only rejuvenates my creative spirit but also fuels my ability to approach challenges with a fresh 
-perspective. Outside of my professional pursuits, you might find me [Another Hobby/Interest] or 
-[Engaging in Another Activity], always seeking new adventures and avenues for personal growth.
-
-This blend of personal interests not only adds vibrancy to my life but also reinforces the idea that a 
-well-rounded individual brings a unique and holistic perspective to every endeavor. As I navigate the 
-intricate dance between my professional and personal worlds, I believe in the power of balance, harnessing 
-the energy from both spheres to contribute meaningfully to both my work and the communities I engage with.
-    
-
-
-
-
-
-
-
-
-
-
-    
--->
