--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -2,27 +2,59 @@
 import Swapbutton from "./swapbutton.astro";
 import { getLangFromUrl, useTranslations } from '../utils/utils';
 import { languages, ui } from "../i18n/ui";
-import {Icon} from 'astro-icon/components'
+import { Icon } from 'astro-icon/components'
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<nav class="navbar bg-base-200 z-50 w-full space-x-4 border-b-2 border-black font-medium">
+<nav class="navbar w-full space-x-4 font-medium fixed bg-base-200 lg:absolute lg:bg-transparent">
+    
     <div class="navbar-start">
-      <div class="dropdown">
-        <label tabindex="0" class="btn btn-ghost lg:hidden">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
-        </label>
-        <ul tabindex="0" class="menu menu-sm min-w-screen dropdown-content z-[1] p-2 shadow bg-base-200 rounded-box w-52 max-lg:w-screen justify-center">
-          <li><a href=`${Astro.url.origin}/${lang}/about` class="max-sm:self-center">{t('nav.about')}</a></li>
-          <li><a href=`${Astro.url.origin}/${lang}/technologies` class="max-sm:self-center">{t('nav.technologies')}</a></li>
-          <li><a class="max-sm:self-center">{t('nav.projects')}</a></li>
-          <li><a class="max-sm:self-center">{t('nav.contact')}</a></li>
-        </ul>
-      </div>
+      
       <a href=`${Astro.url.origin}/${lang}/` class="btn btn-ghost normal-case text-xl ml-4 max-lg:hidden">< rdvid /></a>
+      
+      <div class="drawer">
+        <input id="my-drawer" type="checkbox" class="drawer-toggle" />
+        <div class="drawer-content">
+          <label for="my-drawer" class="btn btn-ghost drawer-button lg:hidden">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+          </label>
+        </div> 
+        <div class="drawer-side z-90">
+          <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
+          <ul class="menu p-4 w-60 min-h-full bg-base-200 text-base-content">
+            
+            <h2 class="text-center py-4">Menu</h2>
+            
+            <li><a href=`${Astro.url.origin}/${lang}/about`>{t('nav.about')}</a></li>
+            <li><a href=`${Astro.url.origin}/${lang}/technologies`>{t('nav.technologies')}</a></li>
+            <li><a>{t('nav.projects')}</a></li>
+            <li><a>{t('nav.contact')}</a></li>
+
+            <div class="divider"></div>
+
+            <h2 class="text-center py-4">Idiomas</h2>
+            {
+              Object.keys(languages).map((language: keyof typeof ui) => (
+                <li>
+                  <a href={`${Astro.url.pathname.replace(lang, language)}`}>
+                    <span class={`fi fi-${language === 'en' ? 'us' : language}`}></span>
+                    {t(`nav.language.${language}`)}
+                  </a>
+                </li>
+              ))
+            }
+            
+          </ul>
+
+
+        </div>
+      </div>
+
     </div>
+
+
     <div class="navbar-center hidden lg:flex">
       <ul class="menu menu-horizontal px-1">
         <li><a href=`${Astro.url.origin}/${lang}/about`>{t('nav.about')}</a></li>
@@ -30,24 +62,36 @@ const t = useTranslations(lang);
         <li><a href=`${Astro.url.origin}/${lang}/projects`>{t('nav.projects')}</a></li>
       </ul>
     </div>
-    <div class="navbar-center flex justify-center">
+
+    <div class="navbar-center flex lg:hidden">
+      <a href=`${Astro.url.origin}/${lang}/` class="btn btn-ghost normal-case text-xl ml-4">< rdvid /></a>
+    </div>
+
+    <div class="navbar-center justify-center hidden lg:flex">
       <div class="dropdown dropdown-hover dropdown-center">
-        <label tabindex={0} class="btn border-0 bg-transparent p-1"><a><span class=`fi fi-${ lang === 'en' ? 'us': lang }`></span></a></label>
-        <ul tabindex={0} class="dropdown-content z-[50] menu p-2 shadow rounded-box w-52 bg-base-200">
+        <label tabindex={0} class="btn border-0 bg-transparent p-1">
+          <a><span class=`fi fi-${ lang === 'en' ? 'us': lang }`></span></a>
+        </label>
+        <ul tabindex={0} class="dropdown-content menu p-2 shadow rounded-box bg-base-200">
           {
             Object.keys(languages).map((language: keyof typeof ui) => (
-              <li><a href={`${Astro.url.pathname.replace(lang, language)}`}><span class={`fi fi-${language === 'en' ? 'us' : language}`}></span>{t(`nav.language.${language}`)}</a></li>
+              <li>
+                <a href={`${Astro.url.pathname.replace(lang, language)}`}>
+                  <span class={`fi fi-${language === 'en' ? 'us' : language}`}></span>
+                  {t(`nav.language.${language}`)}
+                </a>
+              </li>
             ))
           }
         </ul>
       </div>
     </div>
+
+
     <div class="navbar-end">
         <Swapbutton class:list={'max-lg:mr-2'} />
-        <a href={lang == 'br' ? '/br-resume-022024.pdf' : '/en-resume-022024.pdf'} target="_blank" class="btn mr-2 max-lg:hidden bg-base-300 border-2 border-black rounded-full">
-          <!-- <i class="fa-solid fa-download fa-mg"></i> -->
-          <Icon name={'fa:download'}/>
-
+        <a href={lang == 'br' ? '/br-resume-022024.pdf' : '/en-resume-022024.pdf'} target="_blank" class="btn mr-2 max-lg:hidden bg-transparent border-none">
+          <Icon name={'fa:download'} size={20}/>
           {t('nav.downloadcv')}
         </a>
     </div>
