--- a/src/components/modal/github-card.astro
+++ b/src/components/modal/github-card.astro
@@ -1,11 +1,11 @@
 ---
-
+import { Icon } from "astro-icon/components"
 
 ---
 
 <li class="tooltip tooltip-right" data-tip="My Github">
     <a class="p-4 hover:scale-125" onclick="githubModal.showModal()">
-        <i class="fa-brands fa-github fa-lg color-[#333]"></i>
+        <Icon name={'fa-brands:github'} size={24}/>
     </a>
 </li>
 
