--- a/src/components/modal/steam-card.astro
+++ b/src/components/modal/steam-card.astro
@@ -1,14 +1,14 @@
 ---
-
+import { Icon } from "astro-icon/components"
 ---
 
-<li class="tooltip tooltip-right" data-tip="My Stackoverflow">
+<li class="tooltip tooltip-right" data-tip="My Steam profile">
     <a class="p-4 hover:scale-125" onclick="stackModel.showModal()">
-      <i class="fa-brands fa-steam fa-lg"></i>
+      <Icon name={'fa-brands:steam'} size={24}/>
     </a>
 </li>
 
-<!-- Card #1 Github -->
+<!-- Card #1 Steam -->
 <dialog id="stackModel" class="modal modal-middle justify-center h-full">
   <div class="modal-box bg-[#BCBBBB] border-2 border-black">
     <h3 class="font-bold text-lg">Hello!</h3>
