--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -27,7 +27,7 @@ const t = useTranslations(lang);
         </p>
       </section> 
 
-      <section class="row p-4 bg-base-200 m-1 flex flex-col justify-end">
+      <section class="row p-4 bg-base-200 m-1 flex flex-col">
         <h2 class="text-center py-2 font-bold">{t('about.nowdays.title')}</h2>
         <p class="text-justify">
           {t('about.nowdays')}
