--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -2,8 +2,8 @@
 import {Icon} from 'astro-icon/components';
 ---
 
-<footer class="footer footer-center p-5 bg-base-200 bottom-0 static text-base-content border-t-2 border-black">
-    <div class="flex flex-row">
+<footer class="footer footer-center p-5 bg-transparent text-base-content">
+    <div class="w-full flex flex-row justify-end">
        <p>Copyright © 2024 - Made with</p><span><Icon name={"fa:heart"} color='red'/></span><p>@rdvid</p>
     </div>
 </footer>
