--- a/src/components/modal/discord-card.astro
+++ b/src/components/modal/discord-card.astro
@@ -1,10 +1,10 @@
 ---
-
+import { Icon } from "astro-icon/components"
 ---
 
 <li class="tooltip tooltip-right" data-tip="My Discord">
     <a class="p-4 hover:scale-125" onclick="discordModal.showModal()">
-      <i class="fa-brands fa-discord fa-lg color-[#7289da]"></i>    
+      <Icon name={'fa-brands:discord'} size={24}/>
     </a>
 </li>
 
