--- a/src/components/modal/gmail-card.astro
+++ b/src/components/modal/gmail-card.astro
@@ -1,10 +1,10 @@
 ---
-
+import { Icon } from "astro-icon/components"
 ---
 
 <li class="tooltip tooltip-right" data-tip="My Gmail">
     <a class="p-4 hover:scale-125" onclick="gmailModal.showModal()">
-      <i class="fa-solid fa-envelope fa-lg"></i>    
+      <Icon name={'fa:envelope'} size={24}/>
     </a>
 </li>
 
