--- a/src/components/modal/linkedin-card.astro
+++ b/src/components/modal/linkedin-card.astro
@@ -1,14 +1,15 @@
 ---
+import { Icon } from "astro-icon/components"
 
 ---
 
 <li class="tooltip tooltip-right" data-tip="My Linkedin">
     <a class="p-4 hover:scale-125" onclick="linkedinModal.showModal()">
-        <i class="fa-brands fa-linkedin fa-lg"></i>
+      <Icon name={'fa-brands:linkedin'} size={24}/>
     </a>
 </li>
 
-<!-- Card #1 Github -->
+<!-- Card #3 Linkedin -->
 <dialog id="linkedinModal" class="modal modal-middle justify-center h-full">
   <div class="modal-box bg-[#0e76a8] border-2 border-black">
     <h3 class="font-bold text-lg">Hello!</h3>
