--- a/src/components/modal/spotify-card.astro
+++ b/src/components/modal/spotify-card.astro
@@ -1,18 +1,18 @@
 ---
+import { Icon } from "astro-icon/components";
 import Playlist from "../playlist.astro";
-
 ---
 
 <li class="tooltip tooltip-right" data-tip="What im listening">
     <a class="p-4 hover:scale-125" onclick="spotifyModal.showModal()">
-       <i class="fa-brands fa-spotify fa-lg"></i>
+      <Icon name={'fa-brands:spotify'} size={24} />
     </a>
 </li>
 
 <!-- Card #5 Spotify -->
 <dialog id="spotifyModal" class="modal modal-middle justify-center h-full">
-  <div class="modal-box border-2 border-black bg-black w-fit h-fit">
-    <div class="modal-action justify-end mr-4">
+  <div class="modal-box border-black bg-black w-fit h-fit">
+    <div class="modal-action">
       <form method="dialog">
         <button class="btn-outline bg-transparent rounded-full text-red-700 hover:text-red-700 focus:outline-none font-extrabold absolute"><i class="fa-solid fa-xmark fa-xl"></i></button>
       </form>
