--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -2,6 +2,8 @@
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import { getLangFromUrl, useTranslations } from '../../utils/utils';
 import { Image } from 'astro:assets';
+import { Icon } from 'astro-icon/components';
+
 export function getStaticPaths() {
   return [
     {params: {lang: 'en'}},
@@ -16,26 +18,39 @@ const t = useTranslations(lang);
 ---
 
 <BaseLayout title="</rdvid>">
-  <article class="flex flex-col h-full max-lg:h-screen justify-center">
+  <article class="flex flex-col h-screen lg:h-full lg:justify-center">
     <section class="hero">
-      <div class="hero-content flex-col w-full max-lg:py-8 lg:flex-row lg:align-center">
-        <img src="https://f005.backblazeb2.com/file/debbuggers/picofme (1).png" 
-             class="w-3/12 max-w-4/12 max-lg:w-8/12 rounded-xl shadow-2xl border-2 border-black shadow-gray-600" 
-             aria-placeholder="Rafael picture"
-             alt="my profile picture"/>
+      <div class="hero-content flex-col-reverse justify-center max-lg:py-8 lg:flex-row lg:align-center">
         <div class="flex flex-col justify-center w-6/12 max-lg:w-full text-center max-lg:p-4r">
           <p id="placeholder" class="hidden">{t('home.title')}</p>
-          <h1 id="home-title" class="text-4xl font-bold text-center max-lg:text-3xl"></h1>
-          <div class="flex flex-row justify-center py-6">
-            <ul class="text-lg font-light text-start">
-              <li><i class="fa-solid fa-computer fa-md pr-4 pt-2 bg-base-100"></i>{t('home.subtitle')}</li>
-              <li><i class="fa-solid fa-music fa-lg pr-4 pt-2 bg-base-100"></i>{t('home.second-subtitle')}</li>
+          <h1 id="home-title" class="text-4xl font-bold text-center max-lg:text-3xl">‎ </h1>
+          <div class="flex flex-row justify-center my-6">
+            <ul class="text-lg font-light">
+              <li class="flex flex-row">
+                <span class="p-1">
+                  <Icon name={'fa:laptop'} class='align-center'/>
+                </span>
+                <span>
+                  {t('home.subtitle')}
+                </span>
+              </li>
+              <li class="flex flex-row justify-center">
+                <span class="p-1">
+                  <Icon name={'fa:music'} />
+                </span>
+                <span>
+                  {t('home.second-subtitle')}
+                </span>
+              </li>
             </ul>
           </div>
-          <button class="w-4/12 btn btn-primary rounded-full self-center max-lg:w-6/12">
-            <a href=`${Astro.url.origin}/${lang}/about`>About me</a>
-          </button>
+          <a class="btn btn-primary rounded-full self-center max-lg:w-6/12" 
+              href=`${Astro.url.origin}/${lang}/about`>About me</a>
         </div>
+        <Image loading='lazy' src="https://f005.backblazeb2.com/file/debbuggers/picofme (1).png"
+              height={300} width={300} 
+              class="w-3/12 max-lg:w-8/12 rounded-xl shadow-2xl border-2 border-black shadow-gray-600" 
+              aria-label="Rafael picture" alt="my profile picture" />
       </div>
     </section>
   </article>
