--- a/src/pages/[lang]/old-projects.astro
+++ b/src/pages/[lang]/old-projects.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import { getLangFromUrl, useTranslations } from '../../utils/utils';
+import ProjectCard from '../../components/card/project-card.astro';
 
 export function getStaticPaths() {
   return [
@@ -18,8 +19,38 @@ const t = useTranslations(lang);
 
 <BaseLayout>
   <article>
-    
-
+    <div class="grid grid-cols-2">
+      <div class="grid grid-row m-2">
+        <ProjectCard />
+      </div>
+      <div class="grid grid-row m-2">
+        <ProjectCard />
+      </div>
+    </div>
+    <div class="grid grid-cols-2">
+      <div class="grid grid-row m-2">
+        <ProjectCard />
+      </div>
+      <div class="grid grid-row m-2">
+        <ProjectCard />
+      </div>
+    </div>
+    <div class="grid grid-cols-2">
+      <div class="grid grid-row m-2">
+        <ProjectCard />
+      </div>
+      <div class="grid grid-row m-2">
+        <ProjectCard />
+      </div>
+    </div>
+    <div class="grid grid-cols-2">
+      <div class="grid grid-row m-2">
+        <ProjectCard />
+      </div>
+      <div class="grid grid-row m-2">
+        <ProjectCard />
+      </div>
+    </div>
   </article>
 </BaseLayout>
 
