--- a/src/pages/[lang]/technologies.astro
+++ b/src/pages/[lang]/technologies.astro
@@ -19,7 +19,7 @@ const t = useTranslations(lang);
 ---
 
 <BaseLayout>
-  <article class="flex flex-col h-full" >
+  <article class="flex flex-col h-fit" >
     <div class="grid grid-cols-1 min-[450px]:grid-cols-2 min-[625px]:grid-cols-3 min-[875px]:grid-cols-4 min-[1000px]:grid-cols-5 xl:grid-cols-6">
       {
         technologyCards.map((card: TechnologyCard)=>(
@@ -32,5 +32,6 @@ const t = useTranslations(lang);
         ))
       }
     </div>
+    
   </article>
 </BaseLayout>
